--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,8 +22,8 @@ body {
   background-color: red;
 }
 
-.table-striped>tbody>tr:nth-child(odd)>td, 
-.table-striped>tbody>tr:nth-child(odd)>th {
+.table-striped>tbody>tr:nth-child(even)>td, 
+.table-striped>tbody>tr:nth-child(even)>th {
    background-color: navy; 
  }
 /* The footer is positioned at the bottom of the page */
